Fixed wierd parent issue It wasn't allowing me to align the content correctly. I wrapped the content in a div and positioned them using absolute positioning

--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -13,9 +13,7 @@
   }
 
   &__button {
-    display: flex;
     font-weight: 300;
-    font-size: px;
     font: normal 10px;
     font-family: 'Times New Roman', Times, serif, sans-serif 50px;
     width: 100%;
@@ -33,15 +31,20 @@
   }
 }
 
-.fa-plus {
-  position: absolute;
-  top: 30.1%;
-  left: 7%;
+.SetIc {
+  position: relative;
 }
 
+.fa-plus {
+  position: absolute;
+  top: 38%;
+  left: 12%;
+  color: rgb(255, 170, 170);  
+  
+}
 .fa-sticky-note {
   position: absolute;
-  top: 25%;
-  left: 7%;
+  top: 38%;
+  left: 12%;
   color: rgb(255, 170, 170);  
 }
